hydromel/tests/errors/sem-invalid-assign-target.mel
#lang hydromel

# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at https://mozilla.org/MPL/2.0/.

component C
    port x : in unsigned(32)
    port y : out unsigned(32)
    # ERROR: Expression not suitable as assignment target
    y.a = x
end
